--- a/static/whoami.gmi
+++ b/static/whoami.gmi
@@ -10,8 +10,8 @@
 ~ anmd ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~II~~~~~~~~~~I~~~~~~~~~
 ```
 
-=> /index.gmi index
-=> /journal.gmi blog
+=> /index.gmi blog
+=> /journal.gmi journal
 => /about.gmi about
 => /whoami.gmi whoami
 
