--- a/static/whoami.gmi
+++ b/static/whoami.gmi
@@ -26,7 +26,7 @@ I am male ...my first name sometimes makes this statement neccessary. I am super
 
 I wouldn't say I'm intellectual but I love to learn things, for the sake of learning. This means that throughout my life there have been plenty of unfinished experiments, projects and attempted hobbies. Each was started with honest curiosity about something and eventually abandoned when that something was explored well enough and what remained of the project turned into more tedium than joy. That's fine.
 
-I'm a techy and a nerd. Quirky things fascinate me.
+I'm a techi and a nerd. Quirky things fascinate me.
 
 Topics that are important to me these days are:
 
