--- a/static/journal.gmi
+++ b/static/journal.gmi
@@ -17,7 +17,7 @@
 
 # Laniakea
 
-## 2023-01-31
+# 2023-01-31
 ### ChatGPT
 
 Me and my wife have done some experiments with ChatGPT recently. 
@@ -33,7 +33,7 @@ It is a statistics engine, after all. Thank god.
 
 But it is good in exploring factual situations, even if they're hypothetical.
 
-At one point we were having a conversation with ChatGPT on potentially life bearing moons of Jupiter ("Europa") and quizzing the bot on specifics of the subsurface ocean, the thickness of the ice on the surface, why there is liquid water to begin with, ... Finally we tried to get it to come up with specifics of a human habitat in that subsurface ocean. It didn't really get into the details of what is required but I'm quite sure better questioning from our end would have improved the results.
+At one point we were having a conversation with ChatGPT on potentially life bearing moons of Jupiter (“Europa”) and quizzing the bot on specifics of the subsurface ocean, the thickness of the ice on the surface, why there is liquid water to begin with, … Finally we tried to get it to come up with specifics of a human habitat in that subsurface ocean. It didn't really get into the details of what is required but I'm quite sure better questioning from our end would have improved the results.
 
 We had it explain Dark Matter and Dark Energy in layman's terms and as far as I can tell (I'm a space nerd but not an astrophysicist) it got it right.
 
@@ -47,7 +47,7 @@ Ultimatelly I was able to have the bot iterate the code into what I needed.
 
 On another occasion I used ChatGPT to learn more about IPTABLES and how to write firewall directives for my selfhosted setup. The bot never really wrote the correct directives but quizzing it about what this or that part of a rule did, it consistently gave helpful replies and I was able to write the rules myself.
 
-So yeah... ChatGPT is good. I'm quite sure I'll use it as a learning tool from now on.
+So yeah… ChatGPT is good. I'm quite sure I'll use it as a learning tool from now on.
 
 ## 2023-01-26
 ### The flu
@@ -58,13 +58,13 @@ Seriously though, this is the third time in a couple of months that I have falle
 
 So far I'm proud of myself. I sleep _a lot_.
 
-I've spent my waking hours reading "The Ecotechnic Future" by John Michael Greer. Good read, but depressing. Which is why it is important I read it. The book discusses visions for how our industrial civilization will change in a world after peak-oil. It is scary, but it also highlights very well how the current system is unsustainable.
+I've spent my waking hours reading “The Ecotechnic Future” by John Michael Greer. Good read, but depressing. Which is why it is important I read it. The book discusses visions for how our industrial civilization will change in a world after peak-oil. It is scary, but it also highlights very well how the current system is unsustainable.
 
 Is anyone else also tired of the common misuse of this word, "sustainable"? Well there is no helping it, actual sustainability is non-negotiable.
 
 I'll bring the book up again in a later post. Today I'm about a third through and it feels premature to talk about it.
 
-What else have I been up to... mostly bashing my head against IPTABLES. :(
+What else have I been up to… mostly bashing my head against IPTABLES. :(
 
 In my selfhosting setup I'm providing a few apps to myself and my wife: A wiki, a taskboard, RSS reader, data synchronization, ad-blocker. They're all accessible from within our appartment. But I want to be able to access them from anywhere, but without exposing them to the internet.
 
@@ -126,11 +126,11 @@ A digital example is old 8-bit computer graphics and how far Masters of the art 
 
 My own CLI todo application falls well within what I consider a simple tool. It does what I need it to do, and no more. 50 lines of shell script is all that was required for it. With some calls to _man_ I will always be able to understand every aspect of it and change it if needed.
 
-In the same vain, I can relate to the appeal of websites driven by Markdown. Where the content is stored in human readable text files rather than SQL databases, rendering into modern websites on the fly with the help of a tool chain. In fact, when I started to think of creating Laniakea, I did some research into static site generators, and eventually decided _fuck it_, I'll write everything by hand.
+In the same vein, I can relate to the appeal of websites driven by Markdown. Where the content is stored in human readable text files rather than SQL databases, rendering into modern websites on the fly with the help of a tool chain. In fact, when I started to think of creating Laniakea, I did some research into static site generators, and eventually decided _fuck it_, I'll write everything by hand.
 
 Why is that? I couldn't find a tool chain that was simple and that did Markdown to HTML conversion in a way that I liked. I'm sure there is something out there and I simply didn't look hard enough.
 
-But what I found was a very different understanding of 'simplicity'. Take Jekyll for example. It is the site generator used by Github Pages but you can use it yourself, there even is a docker image. I do like docker images. Unfortunatelly the default docker image is over 300 megabyte. Excuse me?! I'm sure Jekyll can do amazing things while converting Markdown to HTML, but 300 MB is... a lot. There is complexity under the hood that no average being will ever grasp.
+But what I found was a very different understanding of ‘simplicity’. Take Jekyll for example. It is the site generator used by Github Pages but you can use it yourself, there even is a docker image. I do like docker images. Unfortunatelly the default docker image is over 300 megabyte. Excuse me?! I'm sure Jekyll can do amazing things while converting Markdown to HTML, but 300 MB is… a lot. There is complexity under the hood that no average being will ever grasp.
 
 On the other end of the spectrum we find a hand-crafted docker image of busybox httpd that is smaller than 100 _kilobyte_. Now, that is simple.
 
@@ -160,15 +160,15 @@ Yet, there was and still is that dream of turning my, our, life around. Reconnec
 
 Some tiny steps have been made since then. I realized that I need to clean up my digital life first, to make mental room for any change. I've spend decades creating this current state. It will take some time to untangle, reduce, simplify, identify and keep only those parts that are worth keeping.
 
-So probably, on the outside not much has changed yet. But I have...
+So probably, on the outside not much has changed yet. But I have…
 
-* ...stopped gaming, with the exception of one mobile game.
-* ...delved into the rabbit hole of self hosting. Move stuff out of the cloud and back onto a machine that I own, administer and mold to my needs. This journey has just begun, there is still plenty to clean up, downgrade, simplify. Currently this has made my life more complex. I'm learning, trying, changing things. This complexity is temporary.
-* ...deleted a dozen or so email accounts
-* ...unsubscribed from Twitter and every Facebook / Meta platform and service that I used. By doing so I have temporarily lost a few relevant people but I have gained time and mental space. I will reconnect.
-* ...gotten off a few online services and wrote a few tools on my own.
-* ...collaborated in tiny capacity with a few open source projects
-* ...moved largely to Raspberry Pis and text-based applications as my computing platform. My main computer including 2 monitors, mouse, keyboard and desk light now consumes around 50 W compared to previously needing 150 W for the desktop compter alone.
+* …stopped gaming, with the exception of one mobile game.
+* …delved into the rabbit hole of self-hosting. Move stuff out of the cloud and back onto a machine that I own, administer and mold to my needs. This journey has just begun, there is still plenty to clean up, downgrade, simplify. Currently this has made my life more complex. I'm learning, trying, changing things. This complexity is temporary.
+* …deleted a dozen or so email accounts
+* …unsubscribed from Twitter and every Facebook / Meta platform and service that I used. By doing so I have temporarily lost a few relevant people but I have gained time and mental space. I will reconnect.
+* …gotten off a few online services and wrote a few tools on my own.
+* …collaborated in tiny capacity with a few open source projects
+* …moved largely to Raspberry Pis and text-based applications as my computing platform. My main computer including 2 monitors, mouse, keyboard and desk light now consumes around 50 W compared to previously needing 150 W for the desktop compter alone.
 
 Regarding non-virtual / digital things: I've gotten rid off an aquarium that I had gotten during the onset of COVID. I've started to learn how to use the Soroban for calculus and I plan to build my own. I had tried to grow some herbs, chilis and paprikas on the balcony. That was largely unsuccessful, I need to learn how to work with the seasons better and be more conscious to cook with ingredients in mind that are currently available.
 
@@ -178,7 +178,7 @@ I've largely stopped buying cheap. I value well-crafted, durable things more.
 
 I did start to learn aquarell painting and did enjoy it. Recently I have stopped again. This is something to pick up once more in 2023
 
-I did read one book ("Earth abides" by George R. Steward) last year. Book as in paper.
+I did read one book (“Earth abides” by George R. Steward) last year. Book as in paper.
 
 We build a small but nice vinyl collection of actually good music. Unsubscribed Spotify and Amazon Music in return.
 
