--- a/static/journal/index.gmi
+++ b/static/journal/index.gmi
@@ -19,6 +19,7 @@
 
 This is a chronological list of all journal entries.
 
+=> 2023-02-04-quality.gmi
 => 2023-01-31-chatGPT.gmi
 => 2023-01-26-flu.gmi
 => 2023-01-21-spot-the-mistake.gmi
